# django-apiblueprint-view

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  build-drafter-mac.sh  build-drafter.sh  build.py  pyproject.toml  run_tests.py  setup.py  testing_requirements.txt
.github/actions/build-wheels/: Dockerfile  action.yml  entrypoint.sh
.github/scripts/: setup-python2.7.sh
.github/workflows/: build-package-mac.yml  build-package.yml  build-wheels.yml  test.yml
apiblueprint_view/: __init__.py  __version__.py  parser.py  views.py
apiblueprint_view/draughtsman/: __init__.py
apiblueprint_view/draughtsman/tests/: test_draughtsman.py
apiblueprint_view/templates/api_docs/: asset.html  copy.html  default_base.html  docs_parent.html  element.html  request.html  resource.html  resource_group.html  response.html  transaction.html  transition.html
apiblueprint_view/templatetags/: dict_utils.py
apiblueprint_view/tests/: base.py  test_01_simplest.py  test_02_resource_action.py  test_03_named_resource.py  test_04_grouping_resources.py  test_05_responses.py  test_06_requests.py  test_07_parameters.py  test_08_attributes.py  test_09_advanced_attributes.py  test_10_data_structures.py  test_11_resource_model.py  test_12_advanced_action.py  test_13_named_endpoints.py  test_14_json_schema.py  test_15_advanced_schema.py  test_host.py  test_includes.py
apiblueprint_view/tests/fixtures/: host.md  parent.md  suspicious.md
