[tool.poetry]
name = "django-apiblueprint-view"
version = "2.4.1"
description = "Render API Blueprints on-the-fly using Django templates"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chris48s/django-apiblueprint-view"
homepage = "https://github.com/chris48s/django-apiblueprint-view"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 2",
    "Framework :: Django :: 3",
    "Framework :: Django :: 4",
]
include = ["apiblueprint_view/templates/**", "apiblueprint_view/lib/libdrafter.so"]
exclude = ["apiblueprint_view/tests/**"]
packages = [ {include = "apiblueprint_view"} ]
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.7"
Django = ">=2.2"
markdown2 = ">=2.3.9"
cffi = "^1.0.0"
refract = "==0.4.0"

[tool.poetry.dev-dependencies]
isort = "^5.11"
flake8 = { version = "^6.1.0", python = "^3.8.1" }
black = "==23.3.0"
coverage = "^7.2"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
