[project]
name = "django-apiblueprint-view"
version = "3.0.1"
description = "Render API Blueprints on-the-fly using Django templates"
authors = [{name = "chris48s"}]
license = "MIT"
readme = "README.md"
classifiers = [
    "Framework :: Django",
]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "markdown2>=2.3.9",
    "cffi>=2.0.0",
    "refract==0.4.0",
]

[tool.poetry]
requires-poetry = ">=2.0"
include = [
    { path = "apiblueprint_view/templates/**", format = ["sdist", "wheel"] },
    { path = "apiblueprint_view/lib/libdrafter.so", format = ["sdist", "wheel"] },
]
exclude = ["apiblueprint_view/tests/**"]
packages = [ {include = "apiblueprint_view"} ]
build = "build.py"

[tool.poetry.group.dev.dependencies]
isort = "7.0.0"
flake8 = "7.3.0"
black = "25.9.0"
coverage = "7.11.0"

[project.urls]
Home = "https://github.com/chris48s/django-apiblueprint-view"
Source = "https://github.com/chris48s/django-apiblueprint-view"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
